solucionados  errores y modificada url de callback

--- a/client/src/app/welcome/welcome.component.css
+++ b/client/src/app/welcome/welcome.component.css
@@ -180,7 +180,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/viajeros.jpg) no-repeat bottom center scroll;
+    background: url(assets/img/viajeros.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
