--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -38,7 +38,7 @@
                         <h1 class="brand-heading">Apollo</h1>
                         <p class="pintro">Comparte tu viaje con el mundo o ínspirate.</p>
                           <!-- <button class="btn btn-primary" (click)="auth.googleLogin()">Log In</button> -->
-                        <a class="btn btn-default btn-lg" (click)="onLoginClick()">
+                        <a href="http://localhost:8080/auth/google" class="btn btn-default btn-lg">
                             <i class="fa fa-google fa-fw"></i><span class="network-name">Sign In</span>
                         </a>
                         <div></div>
