agregar metodos faltantes a los servicios tambien agrego algunos cambios a la vista de creacion de rv

--- a/client/src/app/create-rv/create-rv.component.html
+++ b/client/src/app/create-rv/create-rv.component.html
@@ -1,11 +1,11 @@
 <apollo-navbar [search]="false" [edit]="false"></apollo-navbar>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-sm-6">
-      <creation-form></creation-form>
+    <div class="col-xs-3">
+      <apollo-creation-form></apollo-creation-form>
     </div>
-    <div class="col-sm-6">
-      <creation-panel></creation-panel>
+    <div class="col-xs-9">
+      <apollo-creation-panel></apollo-creation-panel>
     </div>
   </div>
 </div>
