--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -56,8 +56,8 @@
         <div style="border-bottom-width: thin" class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Acerca de Apollo</h2>
-                <p>Apollo es un proyecto que comenzo en la catedra de Ingenieria de Software en la <a href="http://www.frd.utn.edu.ar">UTN FRD</a>.</p>
-                <p>A través de esta red social, se trato de resolver el problema de miles de personas que buscan realizar un viaje con éxito y con el menor esfuerzo posible, de la mano de 
+                <p>Apollo es un proyecto que comenzo en la catedra de Ingeniería de Software en la <a href="http://www.frd.utn.edu.ar">UTN FRD</a>.</p>
+                <p>A través de esta red social, se trato de resolver el problema de miles de personas que buscan realizar un viaje con éxito y con el menor esfuerzo posible, de la mano de
                 viajeros que ya estuvieron en el lugar o quieren realizar la misma travesia.</p>
             </div>
         </div>
@@ -94,6 +94,6 @@
         <div class="container text-center">
             <p>Copyright &copy; Apollo Org. 2016</p>
         </div>
-    </footer>  
-    
+    </footer>
+
   </div>
