--- a/client/src/app/create-rv/components/creation-form/creation-form.component.html
+++ b/client/src/app/create-rv/components/creation-form/creation-form.component.html
@@ -4,23 +4,19 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="form-group">
          <label class="control-label" for="nombre">Nombre:</label>
-         <input class="form-control" id="nombre" type="text" formControlName="nombre">
+         <input id="nombre" class="form-control" type="text" formControlName="nombre" autofocus required>
       </div>
       <div class="form-group">
-        <label class="control-label">Descripcion:</label>
-        <textarea class="form-control" rows="3" formControlName="descripcion"></textarea>
+        <label class="control-label">Descripción:</label>
+        <textarea id="descripcion" class="form-control" rows="5" formControlName="descripcion"></textarea>
       </div>
       <div class="form-group">
-        <label class="control-label">
-          <input class="form-control" type="radio" name="opciones" id="opciones_1" value="PUBLICA">
-          Publica
-        </label>
-        <label class="control-label">
-          <input class="form-control" type="radio" name="opciones" id="opciones_1" value="PRIVADA">
-          Privada   
+        <label class="control-label flex">
+          <input id="visibilidad" type="checkbox" name="visibilidad" value="PUBLICA" checked>
+          Pública
         </label>
       </div>
-      <div id=boton>
+      <div id="boton">
         <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Crear</button>
       </div>
     </form>
