--- a/client/src/app/shared/components/navbar/navbar.component.css
+++ b/client/src/app/shared/components/navbar/navbar.component.css
@@ -1,12 +1,87 @@
 #barra {
   background-color: #337ab7;
   width: 100%;
+  border-radius: 0;
 }
 
 #titulo {
   color: white;
+  display: inline;
 }
 
 .navbar-default {
-  border-color: #337ab7;
+  border-width: 0;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.dropdown .dropdown-toggle {
+  color: #333;
+}
+
+.dropdown li {
+  margin: 0 12px;
+}
+
+.dropdown li.divider {
+  margin: 6px 0;
+}
+
+.dropdown-menu {
+  padding: 6px 0;
+}
+
+.dropdown-menu a {
+  padding: 3px 0;
+}
+
+.dropdown-menu a .glyphicon {
+  padding: 0 7px 0 5px;
+  position: relative;
+  top: 2px;
+}
+
+.navbar-brand {
+  padding: 5px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.navbar-brand img {
+  height: 100%;
+  display: inline-block;
+  padding-right: 5px;
+  padding-left: 10px;
+}
+
+.navbar-brand:hover img {
+  animation: swing 1s normal backwards;
+}
+
+@keyframes swing {
+  20% {
+    -webkit-transform: rotate3d(0, 0, 1, 15deg);
+    transform: rotate3d(0, 0, 1, 15deg);
+  }
+
+  40% {
+    -webkit-transform: rotate3d(0, 0, 1, -10deg);
+    transform: rotate3d(0, 0, 1, -10deg);
+  }
+
+  60% {
+    -webkit-transform: rotate3d(0, 0, 1, 5deg);
+    transform: rotate3d(0, 0, 1, 5deg);
+  }
+
+  80% {
+    -webkit-transform: rotate3d(0, 0, 1, -5deg);
+    transform: rotate3d(0, 0, 1, -5deg);
+  }
+
+  to {
+    -webkit-transform: rotate3d(0, 0, 1, 0deg);
+    transform: rotate3d(0, 0, 1, 0deg);
+  }
 }
