--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -8,7 +8,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a id="titulo" class="navbar-brand" href="#">Apollo</a>
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          <img alt="Apollo" src="assets/img/logo.png">
+          <div id="titulo">Apollo</div>
+        </a>
+      </div>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -17,14 +22,35 @@
       </ul>
       <div [hidden]="search" class="navbar-form navbar-left">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Búsqueda">
         </div>
         <button type="submit" class="btn btn-default">
           <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
         </button>
       </div>
+
       <ul [hidden]="edit" class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+            <span class="caret"></span>
+          </a>
+
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-user"></span>Configuración
+              </a>
+            </li>
+
+            <li class="divider"></li>
+
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-log-out"></span>Salir
+              </a>
+            </li>
+          </ul>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
