--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background: rgba(179,220,237,1);
+  background: -moz-linear-gradient(top, rgba(179,220,237,1) 0%, rgba(61,186,224,0.58) 50%, rgba(188,224,238,0.15) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(179,220,237,1)), color-stop(50%, rgba(61,186,224,0.58)), color-stop(100%, rgba(188,224,238,0.15)));
+  background: -webkit-linear-gradient(top, rgba(179,220,237,1) 0%, rgba(61,186,224,0.58) 50%, rgba(188,224,238,0.15) 100%);
+  background: -o-linear-gradient(top, rgba(179,220,237,1) 0%, rgba(61,186,224,0.58) 50%, rgba(188,224,238,0.15) 100%);
+  background: -ms-linear-gradient(top, rgba(179,220,237,1) 0%, rgba(61,186,224,0.58) 50%, rgba(188,224,238,0.15) 100%);
+  background: linear-gradient(to bottom, rgba(179,220,237,1) 0%, rgba(61,186,224,0.58) 50%, rgba(188,224,238,0.15) 100%);
+  background-attachment: fixed;
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', endColorstr='#bce0ee', GradientType=0 );
+}
+
+body:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  opacity: 0.1;
+  background-image: url('assets/img/cloud-background.jpg');
+  background-repeat: no-repeat;
+}
+
+.flex {
+  display: flex;
+}
