--- a/client/src/app/create-rv/components/creation-form/creation-form.component.css
+++ b/client/src/app/create-rv/components/creation-form/creation-form.component.css
@@ -7,11 +7,13 @@
   margin: 15px 0;
 }
 
-#visibilidad {
-  height: 20px;
-  width: 20px;
-  margin: 0;
-  margin-right: 8px;
+input[type=radio] {
+  height: 15px;
+  width: 15px;
+}
+
+label.radio {
+  padding-left: 35px;
 }
 
 #boton {
