--- a/client/src/app/create-rv/create-rv.component.html
+++ b/client/src/app/create-rv/create-rv.component.html
@@ -1,10 +1,11 @@
-<apollo-navbar [search]="false" [edit]="false"></apollo-navbar>
+<apollo-navbar></apollo-navbar>
+
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-3">
+    <div class="col-xs-4">
       <apollo-creation-form></apollo-creation-form>
     </div>
-    <div class="col-xs-9">
+    <div class="col-xs-8">
       <apollo-creation-panel></apollo-creation-panel>
     </div>
   </div>
