--- a/client/src/app/create-rv/components/creation-form/creation-form.component.html
+++ b/client/src/app/create-rv/components/creation-form/creation-form.component.html
@@ -1,29 +1,35 @@
-<div id="panel-formulario" class="panel panel-primary">
-  <div class="panel-heading"><h3>Nueva Ruta de Viaje</h3></div>
-  <div class="panel-body">
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+<div class="form-box shadow">
+  <div class="form-top">
+    <div class="form-top-left">
+      <h3>Nueva Ruta de Viaje</h3>
+    </div>
+    <div class="form-top-right">
+      <i class="fa fa-plane"></i>
+    </div>
+  </div>
+  <div class="form-bottom">
+    <form role="form" class="create-form" [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="form-group">
-         <label class="control-label" for="nombre">Nombre:</label>
-         <input id="nombre" class="form-control" type="text" formControlName="nombre" autofocus required>
+        <label for="nombre">Nombre:</label>
+        <input id="nombre" type="text" name="nombre" placeholder="Nombre" class="form-control" autofocus required>
       </div>
       <div class="form-group">
-        <label class="control-label">Descripción:</label>
-        <textarea id="descripcion" class="form-control" rows="5" formControlName="descripcion"></textarea>
+        <label for="form-about-yourself">Descripción:</label>
+        <textarea id="descripcion" name="descripcion" rows="3" placeholder="Descripción" class="form-control"></textarea>
       </div>
       <div class="form-group">
-        <label class="control-label">
-            Visibilidad:
-            <label class="radio">
-              <input type="radio" name="visibilidad" value="PUBLICA" checked>Pública
-            </label>
-            <label class="radio">
-              <input type="radio" name="visibilidad" value="PRIVADA">Privada
-            </label>
-        </label>
+        <label for="visibilidad">Visibilidad:</label>
+        <div class="radio">
+          <input type="radio" name="visibilidad" value="PUBLICA" checked>
+          <label>Pública</label>
+        </div>
+        <div class="radio">
+          <input type="radio" name="visibilidad" value="PRIVADA">
+          <label>Privada</label>
+        </div>
       </div>
-      <div id="boton">
-        <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Crear</button>
-      </div>
+      <button type="submit" class="btn btn-primary">Siguiente</button>
     </form>
   </div>
 </div>
+
