--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<apollo-navbar [search]="false" [edit]="false"></apollo-navbar>
+<apollo-navbar></apollo-navbar>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
