--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -1,39 +1,44 @@
-panel .panel-body {
-    width: 70%;
-    height: 50%;
-}
-
-#panel-formulario {
-   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-}
-
-#fondo {
-  background-image: url("../img/travelplan.jpg");
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-}
-
-.container {
-  padding-right: 0px;
-  padding-left: 0px;
-}
-
-#columna-superior {
-  margin-bottom: 4em;
-}
-
-#segunda-fila {
-  margin-top: 4.25em;
-  margin-bottom: 4em;
-}
-
-#boton {
-  text-align:center;
-  margin:auto;
-}
-
-h3 {
+/**
+ * Polaorid. Basado en:
+ * https://paulund.co.uk/create-polaroid-image-with-css
+ */
+a.polaroid {
+  background: white;
+  display: inline;
+  float: left;
+  margin: 0 15px 30px;
+  padding: 10px 10px 70px;
   text-align: center;
+  text-decoration: none;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  transition: all .15s linear;
+  z-index: 0;
+  position: relative;
+  transform: rotate(4deg);
 }
 
+a.polaroid:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
+}
+
+a.polaroid::after {
+  color: #333;
+  font-size: 20px;
+  content: attr(title);
+  position: relative;
+  top: 30px;
+  font-family: 'Indie Flower', cursive;
+}
+
+a.polaroid img {
+  display: block;
+  width: inherit;
+}
+
+@font-face {
+  font-family: 'Indie Flower';
+  font-style: normal;
+  font-weight: 400;
+  src: local('IndieFlower'), url(https://fonts.gstatic.com/s/indieflower/v8/10JVD_humAd5zP2yrFqw6ugdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
