--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -1,99 +1,75 @@
- <div id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-  <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Apollo</a>
-            </div>
+<apollo-navbar-welcome></apollo-navbar-welcome>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about" routerLinkActive="active">Acerca de</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-    <!-- Introduccion -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Apollo</h1>
-                        <p class="pintro">Comparte tu viaje con el mundo o ínspirate.</p>
-                          <!-- <button class="btn btn-primary" (click)="auth.googleLogin()">Log In</button> -->
-                        <a href="http://localhost:8080/auth/google" class="btn btn-default btn-lg">
-                            <i class="fa fa-google fa-fw"></i><span class="network-name">Sign In</span>
-                        </a>
-                        <div></div>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- Acerca de Section -->
-    <section id="about" class="container content-section text-center">
-        <div style="border-bottom-width: thin" class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Acerca de Apollo</h2>
-                <p>Apollo es un proyecto que comenzo en la catedra de Ingeniería de Software en la <a href="http://www.frd.utn.edu.ar">UTN FRD</a>.</p>
-                <p>A través de esta red social, se trato de resolver el problema de miles de personas que buscan realizar un viaje con éxito y con el menor esfuerzo posible, de la mano de
-                viajeros que ya estuvieron en el lugar o quieren realizar la misma travesia.</p>
-            </div>
-        </div>
-    </section>
-
-    <hr>
-
-    <!-- Contacto Section -->
-    <section id="contact" class="container content-section text-center">
+<div id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+  <!-- Introduccion -->
+  <header class="intro">
+    <div class="intro-body">
+      <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contáctate con Nosotros</h2>
-                <p>Siéntete libre de escrbirnos a nuestro email para poder seguir mejorando!</p>
-                <p>No te olvides de seguirnos en las redes sociales</p>
-                <p><a href="mailto:feedback@apollo.com">feedback@apollo.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/apollo-utn-frd/apollo-grails" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
-                    </li>
-                </ul>
-            </div>
+          <div class="col-md-8 col-md-offset-2">
+            <h1 class="brand-heading">Apollo</h1>
+            <p class="pintro">Comparte tu viaje con el mundo o inspírate</p>
+            <a href="http://localhost:8080/auth/google" class="btn btn-default btn-lg">
+              <i class="fa fa-google fa-fw"></i><span class="network-name">Sign In</span>
+            </a>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </header>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Apollo Org. 2016</p>
-        </div>
-    </footer>
+  <!-- Acerca de Section -->
+  <section id="about" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>Acerca de Apollo</h2>
+        <p>Apollo es un proyecto que comenzo en la catedra de Ingeniería de Software en la <a href="http://www.frd.utn.edu.ar">UTN FRD</a>.</p>
+        <p>A través de esta red social, se trató de resolver el problema de miles de personas que buscan realizar un viaje con éxito y con el menor esfuerzo posible, de la mano de viajeros que ya estuvieron en el lugar o quieren realizar la misma travesía.</p>
+      </div>
+    </div>
+  </section>
 
-  </div>
+  <hr>
+
+  <!-- Contacto Section -->
+  <section id="contact" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>Contáctate con Nosotros</h2>
+
+        <p>Puedes visitarnos en las redes sociales.</p>
+        <ul class="list-inline banner-social-buttons">
+          <li>
+            <a href="#" class="btn btn-default btn-lg">
+              <i class="fa fa-facebook fa-fw"></i>
+              <span class="network-name">Facebook</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="btn btn-default btn-lg">
+              <i class="fa fa-twitter fa-fw"></i>
+              <span class="network-name">Twitter</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/apollo-utn-frd/apollo" class="btn btn-default btn-lg">
+              <i class="fa fa-github fa-fw"></i>
+              <span class="network-name">Github</span>
+            </a>
+          </li>
+        </ul>
+
+        <p>¡Siéntete libre de escribirnos a nuestro email para poder seguir mejorando!</p>
+        <p><a href="mailto:feedback@apollo.com">feedback@apollo.com</a></p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container text-center">
+      <p>Copyright &copy; Apollo Corp. 2016</p>
+    </div>
+  </footer>
+
+</div>
