--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -20,22 +20,22 @@
           </div>
         </div>
         <div class="form-bottom">
-          <form role="form" class="registration-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+          <form role="form" class="registration-form" [formGroup]="this.form" (ngSubmit)="onSubmit()">
             <div class="form-group">
               <label class="sr-only" for="username">Nombre de usuario</label>
-              <input id="username" type="text" name="username" placeholder="Nombre de usuario" class="form-control" autofocus required>
+              <input id="username" type="text" name="username" formControlName="username" placeholder="Nombre de usuario" class="form-control" autofocus required>
             </div>
             <div class="form-group">
               <label class="sr-only" for="form-last-name">Nombre</label>
-              <input id="nombre" type="text" name="nombre" placeholder="Nombre" class="form-control" required>
+              <input id="nombre" type="text" name="nombre" formControlName="nombre" placeholder="Nombre" class="form-control" required>
             </div>
             <div class="form-group">
               <label class="sr-only" for="apellido">Apellido</label>
-              <input id="apellido" type="text" name="apellido" placeholder="Apellido" class="form-control" required>
+              <input id="apellido" type="text" name="apellido" formControlName="apellido" placeholder="Apellido" class="form-control" required>
             </div>
             <div class="form-group">
               <label class="sr-only" for="form-about-yourself">Cuéntanos sobre ti</label>
-              <textarea id="descripcion" name="descripcion" rows="3" placeholder="Cuéntanos sobre ti" class="form-control"></textarea>
+              <textarea id="descripcion" name="descripcion" formControlName="descripcion" rows="3" placeholder="Cuéntanos sobre ti" class="form-control"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Registrarse</button>
           </form>
