--- a/client/src/app/create-rv/components/creation-form/creation-form.component.html
+++ b/client/src/app/create-rv/components/creation-form/creation-form.component.html
@@ -10,15 +10,15 @@
   <div class="form-bottom">
     <form role="form" class="create-form" [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="form-group">
-        <label for="nombre">Nombre:</label>
+        <label for="nombre">Nombre</label>
         <input id="nombre" type="text" name="nombre" placeholder="Nombre" class="form-control" autofocus required>
       </div>
       <div class="form-group">
-        <label for="form-about-yourself">Descripción:</label>
+        <label for="form-about-yourself">Descripción</label>
         <textarea id="descripcion" name="descripcion" rows="3" placeholder="Descripción" class="form-control"></textarea>
       </div>
       <div class="form-group">
-        <label for="visibilidad">Visibilidad:</label>
+        <label for="visibilidad">Visibilidad</label>
         <div class="radio">
           <input type="radio" name="visibilidad" value="PUBLICA" checked>
           <label>Pública</label>
