Agregado informacion del perfil en la home
+ Cambie la fuente por default
+ Actualizado Font Awesome
+ Agregado Bootstrap local

--- a/client/src/app/create-rv/create-rv.component.html
+++ b/client/src/app/create-rv/create-rv.component.html
@@ -2,10 +2,10 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-4">
+    <div class="col-md-4">
       <apollo-creation-form></apollo-creation-form>
     </div>
-    <div class="col-xs-8">
+    <div class="col-md-8">
       <apollo-creation-panel></apollo-creation-panel>
     </div>
   </div>
