--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <apollo-navbar></apollo-navbar>
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-sm-6">
-      // panel de usuario
+    <div class="col-md-3">
+      <apollo-profile-card></apollo-profile-card>
     </div>
-    <div class="col-sm-6">
+    <div class="col-md-9">
       // menu de inicio
     </div>
   </div>
