--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -16,7 +16,7 @@
             <p>Debes completar los siguientes datos.</p>
           </div>
           <div class="form-top-right">
-            <i class="fa fa-plane"></i>
+            <i class="fa fa-plane" aria-hidden="true"></i>
           </div>
         </div>
         <div class="form-bottom">
