--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -6,7 +6,7 @@
     <div class="intro-body">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 col-md-offset-2">
+          <div class="col-md-10 col-md-offset-1">
             <h1 class="brand-heading">Apollo</h1>
             <p class="pintro">Comparte tu viaje con el mundo o inspírate</p>
             <a href="http://localhost:8080/auth/google" class="btn btn-default btn-lg">
@@ -21,10 +21,11 @@
   <!-- Acerca de Section -->
   <section id="about" class="container content-section text-center">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
+      <div class="col-md-10 col-md-offset-1">
         <h2>Acerca de Apollo</h2>
-        <p>Apollo es un proyecto que comenzo en la catedra de Ingeniería de Software en la <a href="http://www.frd.utn.edu.ar">UTN FRD</a>.</p>
-        <p>A través de esta red social, se trató de resolver el problema de miles de personas que buscan realizar un viaje con éxito y con el menor esfuerzo posible, de la mano de viajeros que ya estuvieron en el lugar o quieren realizar la misma travesía.</p>
+        <p>Apollo es una red social para compartir viajes. Te permite llevar a cabo la planificación de un viaje y el descubrimiento de nuevos destinos turísticos sin tener que pasar horas buscando información sobre el mismo en internet; tan solo debes entrar en la aplicación y ver los viajes y recomendaciones de otras personas que te alcanzarán para crear tu viaje ideal.</p>
+        <p>A través de esta red social, se intenta resolver el problema de miles de personas que buscan realizar un viaje con éxito y con el menor esfuerzo posible, de la mano de viajeros que ya estuvieron en el lugar o quieren realizar la misma travesía.</p>
+        <p>Apollo es un proyecto que comenzó en la catedra de Ingeniería de Software en la <a href="http://www.frd.utn.edu.ar">UTN FRD</a>.</p>
       </div>
     </div>
   </section>
@@ -34,7 +35,7 @@
   <!-- Contacto Section -->
   <section id="contact" class="container content-section text-center">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
+      <div class="col-md-10 col-md-offset-1">
         <h2>Contáctate con Nosotros</h2>
 
         <p>Puedes visitarnos en las redes sociales.</p>
