--- a/client/src/app/create-rv/components/creation-form/creation-form.component.html
+++ b/client/src/app/create-rv/components/creation-form/creation-form.component.html
@@ -4,7 +4,7 @@
       <h3>Nueva Ruta de Viaje</h3>
     </div>
     <div class="form-top-right">
-      <i class="fa fa-plane"></i>
+      <i class="fa fa-plane" aria-hidden="true"></i>
     </div>
   </div>
   <div class="form-bottom">
