--- a/client/src/app/create-rv/components/creation-panel/creation-panel.component.html
+++ b/client/src/app/create-rv/components/creation-panel/creation-panel.component.html
@@ -2,6 +2,7 @@
   <sebm-google-map
     [latitude]="lat"
     [longitude]="lng"
+    [zoom]="zoom"
     [streetViewControl]="ui"
     (mapClick)="this.onMapClick($event)"
   >
