--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -12,6 +12,11 @@
             <a href="http://localhost:8080/auth/google" class="btn btn-default btn-lg">
               <i class="fa fa-google fa-fw"></i><span class="network-name">Sign In</span>
             </a>
+            <div>
+              <a href="#about" class="btn btn-circle page-scroll">
+                  <i class="fa fa-angle-double-down animated"></i>
+              </a>
+            </div>
           </div>
         </div>
       </div>
