--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -5,8 +5,8 @@
     <div class="col-md-3">
       <apollo-profile-card></apollo-profile-card>
     </div>
-    <div class="col-md-9">
-      // menu de inicio
+    <div class="col-md-7 col-md-offset-1">
+      <apollo-message-create-rv></apollo-message-create-rv>
     </div>
   </div>
 </div>
