--- a/client/src/app/shared/components/profile-card/profile-card.component.css
+++ b/client/src/app/shared/components/profile-card/profile-card.component.css
@@ -9,54 +9,49 @@
   width: 100%;
 }
 
-.pcard-body {
-  padding: 5px 15px;
+.information {
+  padding: 5px 15px 25px;
   float: left;
 }
 
-.pcard-body h2 {
+.information h2 {
   margin-bottom: 5px;
 }
 
-.pcard-body em {
+.information em {
   padding-bottom: 10px;
   float: left;
   color: #a9a1a1;;
 }
 
-.pcard-body .description p:last-of-type {
-  margin: 0;
-}
-
-.pcard-body hr,
-.pcard-body .description,
-.panel-statistics {
+.information .description,
+.panel-statistics,
+.statistics {
   float: left;
   width: 100%;
 }
 
 .panel-statistics {
-  margin-bottom: 10px;
+  margin-bottom: 0;
 }
 
-.statistic {
-  display: block;
-  padding-bottom: 7px;
+.information .description p:last-of-type {
+  margin: 0;
 }
 
-.statistic a {
-  display: flex;
-  align-items: center;
-  color: #154771;
+.statistics {
+  margin-bottom: 0;
+  padding: 10px 15px;
+  background-color: #f5f5f5;
 }
 
-.statistic a:hover,
-.statistic a:focus {
-  text-decoration: none;
-  color: #3277b3;
+.statistics + .statistics {
+  margin-bottom: 0;
+  padding: 10px 15px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #ddd;
 }
 
-.statistic .fa {
-  width: 40px;
-  font-size: 1.5em;
+.statistics i.fa {
+  margin-right: 7px;
 }
