--- a/client/src/app/shared/components/profile-card/profile-card.component.html
+++ b/client/src/app/shared/components/profile-card/profile-card.component.html
@@ -3,35 +3,47 @@
     <img class="img-responsive" src="https://k46.kn3.net/taringa/3/C/0/3/E/A/Prensa-Taringa/C1E.jpg" alt="Avatar">
   </div>
 
-  <div class="pcard-body">
-    <h2>Ricardo Fort</h2>
-    <em>@comandantefort</em>
+  <div class="pcard-body pull-right">
+    <section class="information">
+      <h2>Ricardo Fort</h2>
+      <em>@comandantefort</em>
 
-    <section class="description">
-      <p>ERA UN HOMBRE DE NACIONALIDAD ARGENTINA QUE SE CRIO EN UN BARRIO HUMILDE DE BUENOS AIRES!!</p>
-    </section>
-
-    <hr class="pull-left">
-
-    <section class="panel-statistics">
-      <div class="statistic">
-        <a href="#" class="text-center">
-          <i class="fa fa-plane" aria-hidden="true"></i>
-          <span>9 rutas de viajes</span>
-        </a>
-      </div>
-      <div class="statistic">
-        <a href="#" class="text-center">
-          <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-          <span>210 seguidores</span>
-        </a>
-      </div>
-      <div class="statistic">
-        <a href="#" class="text-center">
-          <i class="fa fa-user-circle" aria-hidden="true"></i>
-          <span>256 siguiendo</span>
-        </a>
+      <div class="description">
+        <p>ERA UN HOMBRE DE NACIONALIDAD ARGENTINA QUE SE CRIO EN UN BARRIO HUMILDE DE BUENOS AIRES!!</p>
       </div>
     </section>
-  </div>
+
+    <section [hidden]="!panelRutas" class="panel-statistics shadow">
+      <div id="creadas" class="statistics">
+        <h4 class="panel-title">
+          <a href="#" role="button">
+            <i class="fa fa-plane" aria-hidden="true"></i>9 viajes creados
+          </a>
+        </h4>
+      </div>
+
+      <div id="favoritas" class="statistics">
+        <h4 class="panel-title">
+          <a href="#" role="button">
+            <i class="fa fa-star" aria-hidden="true"></i>20 viajes favoritos
+          </a>
+        </h4>
+      </div>
+
+      <div id="seguidores" class="statistics">
+        <h4 class="panel-title">
+          <a href="#" role="button">
+            <i class="fa fa-user-circle-o" aria-hidden="true"></i>210 seguidores
+          </a>
+        </h4>
+      </div>
+
+      <div id="siguiendo" class="statistics">
+        <h4 class="panel-title">
+          <a href="#" role="button">
+            <i class="fa fa-user-circle" aria-hidden="true"></i>250 siguiendo
+          </a>
+        </h4>
+      </div>
+    </section>
 </div>
