Agregado un prototipo de la vista de RV
+ Eliminados los margenes de la imagen del mensaje de creación de ruta
de viaje.
+ Eliminada la sombra interna en la sección de información de
profile-card.

--- a/client/src/app/home/components/message-create-rv/message-create-rv.component.html
+++ b/client/src/app/home/components/message-create-rv/message-create-rv.component.html
@@ -1,4 +1,4 @@
-<div class="message">
+<div class="message shadow">
   <div class="background">
     <div class="gradient">
       <section class="text-box">
