--- a/client/src/app/shared/components/profile-card/profile-card.component.html
+++ b/client/src/app/shared/components/profile-card/profile-card.component.html
@@ -6,7 +6,7 @@
   <div class="pcard-body pull-right">
     <section class="information">
       <h2>Ricardo Fort</h2>
-      <em>@comandantefort</em>
+      <em class="username">@comandantefort</em>
 
       <div class="description">
         <p>ERA UN HOMBRE DE NACIONALIDAD ARGENTINA QUE SE CRIO EN UN BARRIO HUMILDE DE BUENOS AIRES!!</p>
@@ -46,4 +46,5 @@
         </h4>
       </div>
     </section>
+  </div>
 </div>
