agregados botones en vista de rv

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -12,6 +12,8 @@
 
         <div id="publicaciones">
           <apollo-preview-rv></apollo-preview-rv>
+          <apollo-preview-rv></apollo-preview-rv>
+          <apollo-preview-rv></apollo-preview-rv>
         </div>
       </div>
     </section>
