--- a/client/src/app/shared/components/preview-rv/preview-rv.component.html
+++ b/client/src/app/shared/components/preview-rv/preview-rv.component.html
@@ -1,20 +1,42 @@
 <div class="preview-rv shadow">
-  <section class="col-profile-picture">
-    <img class="profile-picture" src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg">
-  </section>
+  <div class="background">
+    <section class="col-profile-picture">
+      <img class="profile-picture" src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg">
+    </section>
 
-  <section class="col-rv">
-    <a class="information" href="#">
-      <strong class="nombre">Matías Mangiantini</strong>
-      <span class="username">@matias.mangiantini</span>
-    </a>
+    <section class="col-rv">
+      <a class="info-user" href="#">
+        <strong class="nombre">Matías Mangiantini</strong>
+        <span class="username">@matias.mangiantini</span>
+      </a>
 
-    <div class="rv">
-      <h4 class="nombre-rv">Mi ruta de viaje</h4>
-      <p class="descripcion-rv">
-        Una descripción generica.
-      </p>
-      <img class="map" src="assets/img/sample-map.png">
-    </div>
-  </section>
+      <div class="info-rv">
+        <!-- Si es la ruta de viaje es privada
+        <i class="visibilidad fa fa-lock" aria-hidden="true" title="Privada"></i>
+        -->
+        <i class="visibilidad fa fa-globe" aria-hidden="true" title="Pública"></i>
+        <span class="date-created"> · 1 min</span>
+      </div>
+
+      <div class="rv">
+        <h4 class="nombre-rv">Mi ruta de viaje</h4>
+        <p class="descripcion-rv">
+          Una descripción generica.
+        </p>
+        <img class="map" src="assets/img/sample-map.png">
+      </div>
+    </section>
+  </div>
+
+  <div class="actions">
+    <button class="favoritos">
+      <i class="fa fa-star" aria-hidden="true"></i>Favoritos
+    </button>
+    <button class="comentar">
+      <i class="fa fa-comment" aria-hidden="true"></i>Comentar
+    </button>
+    <button class="compartir">
+      <i class="fa fa-share" aria-hidden="true"></i>Compartir
+    </button>
+  </div>
 </div>
