--- a/client/src/app/shared/components/profile-card/profile-card.component.html
+++ b/client/src/app/shared/components/profile-card/profile-card.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="pcard-body pull-right">
-    <section class="information">
+    <section class="info-user">
       <h2>Ricardo Fort</h2>
       <em class="username">@comandantefort</em>
 
